--- a/tmcproj/templates/contact.html
+++ b/tmcproj/templates/contact.html
@@ -10,15 +10,35 @@
 
 {% block 'content' %}
 
-  <!-- ======= Header ======= -->
-  
-    <!-- ======= Breadcrumbs ======= -->
+  {% comment %} <!-- ======= Header ======= -->
+  <header id="header" class="header d-flex align-items-center fixed-top">
+    <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
 
-    <nav class="navbar bg-body-tertiary">
-      <div class="container-fluid">
-        <a class="navbar-brand text-danger" href="{% url "" %}">Go to home</a>
-      </div>
-    </nav>
+      <a href="" class="logo d-flex align-items-center">
+        
+        {% if user.is_authenticated %}
+            <h1 class="text-danger"><i class="bi bi-person-circle"></i> {{ user.username }}</h1>
+        {% else %}
+            <h1>TMCTradingo</h1>
+        {% endif %}
+
+      </a>
+
+      <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
+      <i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x"></i>
+      <nav id="navbar" class="navbar">
+        <ul>
+          <li><a href="{% url "index" %}" class="active">Home</a></li>
+          {% if not user.is_authenticated %}<li><a href="{% url "login" %}">Login</a></li>{% endif %}
+          {% if not user.is_authenticated %}<li><a href="{% url "register" %}">Register</a></li>{% endif %}
+
+          <!-- <li><a href="">Contact</a></li> -->
+          {% if user.is_authenticated %}<li><a href="{% url "signout" %}">Signout</a></li>{% endif %}
+      </nav><!-- .navbar -->
+    </div>
+  </header><!-- End Header -->
+  <!-- End Header --> {% endcomment %}
+
 
 
     <!-- ======= Contact Section ======= -->
