--- a/tmcproj/templates/login.html
+++ b/tmcproj/templates/login.html
@@ -56,7 +56,7 @@
         <ul>
           <li><a href="{% url "index" %}" class="active">Home</a></li>
           {% if not user.is_authenticated %}<li><a href="{% url "register" %}">Register</a></li>{% endif %}
-           <!-- <li><a href="{% url "contact" %}">Contact</a></li>  -->
+           <li><a href="{% url "contact" %}">Contact</a></li>
         </ul>
       </nav><!-- .navbar -->
 
