--- a/tmcproj/templates/contact.html
+++ b/tmcproj/templates/contact.html
@@ -53,7 +53,7 @@
               <i class="bi bi-envelope flex-shrink-0"></i>
               <div>
                 <h4>Email:</h4>
-                <p>info@example.com</p>
+                <p>tmc369@gmail.com</p>
               </div>
             </div><!-- End Info Item -->
 
@@ -61,43 +61,11 @@
               <i class="bi bi-telegram flex-shrink-0"></i>
               <div>
                 <h4>Telegram:</h4>
-                <p>+1 5589 55488 55</p>
+                <p>@TMCtradingo</p>
               </div>
             </div><!-- End Info Item -->
 
-            <div class="info-item d-flex">
-              <i class="bi bi-twitter flex-shrink-0"></i>
-              <div>
-                <h4>Twitter:</h4>
-                <p>+1 5589 55488 55</p>
-              </div>
-            </div><!-- End Info Item -->
           </div>
-
-          <div class="col-lg-8">
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
-              <div class="row">
-                <div class="col-md-6 form-group">
-                  <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
-                </div>
-                <div class="col-md-6 form-group mt-3 mt-md-0">
-                  <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
-                </div>
-              </div>
-              <div class="form-group mt-3">
-                <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
-              </div>
-              <div class="form-group mt-3">
-                <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
-              </div>
-              <div class="my-3">
-                <div class="loading">Loading</div>
-                <div class="error-message"></div>
-                <div class="sent-message">Your message has been sent. Thank you!</div>
-              </div>
-              <div class="text-center"><button type="submit">Send Message</button></div>
-            </form>
-          </div><!-- End Contact Form -->
 
         </div>
 
