--- a/tmcproj/templates/login.html
+++ b/tmcproj/templates/login.html
@@ -55,7 +55,6 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a href="{% url "index" %}" class="active">Home</a></li>
-          {% if not user.is_authenticated %}<li><a href="{% url "register" %}">Register</a></li>{% endif %}
            <li><a href="{% url "contact" %}">Contact</a></li>
         </ul>
       </nav><!-- .navbar -->
@@ -89,7 +88,7 @@
             {% for i in messages %}
             <div class="mt-3 pt-2"><p class="lead fs-6 text-center text-danger">{{ i }}</p></div>
           {% endfor %}
-          <p class=" mt-3 text-center">If you haven't registered yet, please <a href="/register">register<a/></p>
+          <p class=" mt-3 text-center">If you haven't registered yet, please <a href="https://t.me/TMCtradingo" target="_blank">Contact</a></p>
         </div>
     </div>
   </div>
