--- a/tmcproj/templates/index.html
+++ b/tmcproj/templates/index.html
@@ -105,7 +105,7 @@
                 {% endif %}
 
               {% else %}
-              <a class="cta-btn" href="{% url 'register' %}" data-toggle="modal" data-target="#loginModal">Register</a>
+              <a class="cta-btn" href="{% url 'login' %}" data-toggle="modal" data-target="#loginModal">Login</a>
             {% endif %}
           </div>
         </div>
