--- a/tmcproj/templates/contact.html
+++ b/tmcproj/templates/contact.html
@@ -53,7 +53,7 @@
               <i class="bi bi-envelope flex-shrink-0"></i>
               <div>
                 <h4>Email:</h4>
-                <p>tmc369@gmail.com</p>
+                <p>tmcompany369@gmail.com</p>
               </div>
             </div><!-- End Info Item -->
 
