--- a/tmcproj/templates/index.html
+++ b/tmcproj/templates/index.html
@@ -295,22 +295,22 @@
           <p>Explore the world of trading with our comprehensive course designed for beginners. Learn at your own pace with our easy-to-follow lessons covering technical analysis, price action, and more. Start your trading journey today and unlock the potential of the financial markets.</p>
           <p class="contact-info">
             For Enquiries & Support: <br>
-            <a href="mailto:tmcompany369@gmail.com">
+            <a href="">
               <i class="bi bi-envelope"></i> tmcompany369@gmail.com
             </a>
             <br>
-            <a href="https://t.me/TMCtradingo" target="_blank">
+            <a href="" target="_blank">
               <i class="bi bi-telegram"></i>@TMCtradingo
             </a>
           </p>
           <div class="social-links d-flex mt-4">
-             <!-- ======= Footer =======  --> 
+             <!-- ======= Footer ======= 
              <a href="https://t.me/TMCtradingo" class="telegram" target="_blank" title="Visit our Telegram page">
               <i class="bi bi-telegram"></i>
             </a>
             <a href="mailto:tmc369@gmail.com" class="email" title="Send us an email">
               <i class="bi bi-envelope"></i>
-            </a>
+            </a>  --> 
              
           </div>
         </div>
