--- a/tmcproj/templates/contact.html
+++ b/tmcproj/templates/contact.html
@@ -53,17 +53,27 @@
               <i class="bi bi-envelope flex-shrink-0"></i>
               <div>
                 <h4>Email:</h4>
-                <p>tmcompany369@gmail.com</p>
+                <p>
+                  <p>
+                    <a href="https://mail.google.com/mail/?view=cm&to=tmcompany369@gmail.com" target="_blank">
+                      tmcompany369@gmail.com
+                    </a>
+                  </p>
+                  
+                </p>
               </div>
             </div><!-- End Info Item -->
-
+            
             <div class="info-item d-flex">
               <i class="bi bi-telegram flex-shrink-0"></i>
               <div>
                 <h4>Telegram:</h4>
-                <p>@TMCtradingo</p>
+                <p>
+                  <a href="https://t.me/TMCtradingo" target="_blank">@TMCtradingo</a>
+                </p>
               </div>
             </div><!-- End Info Item -->
+            
 
           </div>
 
