--- a/tmcproj/templates/index.html
+++ b/tmcproj/templates/index.html
@@ -206,7 +206,7 @@
                 <h3 class="accordion-header">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq-content-6">
                     <i class="bi bi-question-circle question-icon"></i>
-                    WE offer Refund Policy only for a weak.
+                    WE offer Refund Policy only for 48 hours.
                   </button>
                 </h3>
                 <div id="faq-content-6" class="accordion-collapse collapse" data-bs-parent="#faqlist">
@@ -265,7 +265,7 @@
         <div class="row gy-4 justify-content-center">
           <div class="col-lg-4 text-center mx-auto" data-aos="fade-up" data-aos-delay="200">
               <div class="pricing-item featured">
-                  <h4><span class="text-danger" style="text-decoration: line-through;">₹24,999</span><br> ₹6,999<span></span></h4>
+                  <h4><span class="text-danger" style="text-decoration: line-through;">₹24,999</span><br> ₹2,899<span></span></h4>
                   <ul>
                       <li><i class="bi bi-check"></i> 4 hours of on-demand video</li>
                       <li><i class="bi bi-check"></i> Engaging Malayalam classes</li>
@@ -293,35 +293,6 @@
             <span>TMCTradingo</span>
           </a>
           <p>Explore the world of trading with our comprehensive course designed for beginners. Learn at your own pace with our easy-to-follow lessons covering technical analysis, price action, and more. Start your trading journey today and unlock the potential of the financial markets.</p>
-          <p class="contact-info">
-            For Enquiries & Support: <br>
-            <a href="">
-              <i class="bi bi-envelope"></i> tmcompany369@gmail.com
-            </a>
-            <br>
-<<<<<<< HEAD
-            <a href="" target="_blank">
-=======
-            <a href="http://t.me/TMCtradingo" target="_blank">
->>>>>>> 24241ea (commited)
-              <i class="bi bi-telegram"></i>@TMCtradingo
-            </a>
-          </p>
-          <div class="social-links d-flex mt-4">
-<<<<<<< HEAD
-             <!-- ======= Footer ======= 
-             <a href="https://t.me/TMCtradingo" class="telegram" target="_blank" title="Visit our Telegram page">
-=======
-             <!-- ======= Footer =======  --> 
-             <a href="http://t.me/TMCtradingo" class="telegram" target="_blank" title="Visit our Telegram page">
->>>>>>> 24241ea (commited)
-              <i class="bi bi-telegram"></i>
-            </a>
-            <a href="mailto:tmcompany369@gmail.com" class="email" title="Send us an email">
-              <i class="bi bi-envelope"></i>
-            </a>  --> 
-             
-          </div>
         </div>
 
         <div class="col-lg-2 col-6 footer-links">
@@ -337,7 +308,7 @@
           <h4></h4>
           <ul>
             <li><a href="#">About Cource</a></li>
-            <li><a href="">Contact</a></li>
+            <li><a href="{% url "contact" %}">Contact</a></li>
             <li><a href="#">Privacy policy</a></li>
             <li><a href="#">Terms of service</a></li>
           </ul>
@@ -360,29 +331,26 @@
 
 
 <!-- Modal -->
-<<<<<<< HEAD
-=======
 
->>>>>>> 24241ea (commited)
 <div class="modal fade" id="alertModal" tabindex="-1" aria-labelledby="alertModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="card">
-        <div class="card-body mx-3 p-5 pb-0">
+        <div class="card-body m-3 p-3 pb-0">
           <h5 class="card-title text-center">Deposit USDT to Binance</h5>
-          <img src="{% static "img/qr.jpeg" %}" class="card-img-top" alt="...">
+          <img src="{% static "img/qr1.jpg" %}" class="card-img-top" alt="...">
 
         </div>
-        <div class="card-body p-5">
+        <div class="card-body px-5">
           <div class="row">
-            <div class="col card-text text-start"><small>Network</small></div><div class="col card-text text-end"><small>Tron (TRC20)</small></div>
+            <div class="col card-text text-start"><small>Network</small></div><div class="col card-text text-end"><small>BNM Smart Chain (BEP20)</small></div>
           </div>
           <div class="card-text text-center text-danger mt-3"><small>Wallet Address: </small></div>
-            <div class="card-text text-center fs-6 mt-2">TYjBiR5mSQphURaDqZrxGcn1HDnGKTQaVG</div>
+            <div class="card-text text-center fs-6 mt-2">0x3af82556026d812c2b693eb94454b87f9ae0bfc2</div>
             <div class="card-text text-center fs-6 mt-3"><a id="copyButton" class="btn btn-outline-warning btn-sm" style="width: 120px;"><i class="bi bi-copy"></i> Copy</a></div>
             <div class="card-text text-center fs-6 mt-2"><a id="saveImageButton" class="btn btn-warning btn-sm text-light" style="width: 120px;"><i class="bi bi-save"></i> Save Image</a></div>          
         </div>
-        <div class="card-body m-0 p-3 text-center">
+        <div class="card-body m-0 pt-2 text-center">
           <p><small>Don't send NFTs to this address.
             Smart contract deposits are not supported with the exception of ETH via ERC20, BSC via BEP20, Arbitrum and Optimism networks.
           </small></p>
@@ -392,10 +360,6 @@
   </div>
 </div>
 
-<<<<<<< HEAD
-=======
-
->>>>>>> 24241ea (commited)
 <div class="modal fade" id="alertModal_StartLearning" tabindex="-1" aria-labelledby="alertModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
@@ -424,7 +388,7 @@
       var copyButton = document.getElementById('copyButton');
       copyButton.addEventListener('click', function() {
           var textarea = document.createElement('textarea');
-          textarea.value = 'TYjBiR5mSQphURaDqZrxGcn1HDnGKTQaVG';
+          textarea.value = '0x3af82556026d812c2b693eb94454b87f9ae0bfc2';
           document.body.appendChild(textarea);
           textarea.select();
           document.execCommand('copy');
@@ -440,7 +404,7 @@
       saveImageButton.addEventListener('click', function() {
           var link = document.createElement('a');
           link.href = '/static/img/qrcode.jpg'; 
-          link.download = 'qr.jpg'; 
+          link.download = 'qr1.jpg'; 
           document.body.appendChild(link);
           link.click();
           document.body.removeChild(link);
